syntax = "proto3";

package usersrv;

option go_package = "proto;usersrv";

service UserSrv {
	rpc InspectUser(InspectRequest) returns (InspectResponse);
	rpc UpdateUser(UpdateRequest) returns (UpdateResponse);
	rpc AddUser(AddRequest) returns (AddResponse);
	rpc DeleteUser(DeleteRequest) returns (DeleteResponse);
}

message User {
	string uid = 1;
	string username = 2;
	string password = 3;
	string tel = 4;
	int32 sex = 5;
	int32 age = 6;
	string address = 7;
	int32 class_num = 8;
	string img = 9;
}

message InspectRequest {
	string uid = 1;
	string tel = 2;
}

message InspectResponse {
	User user = 1;
	string msg = 2;
}

message UpdateRequest {
	User user = 1;
}

message UpdateResponse {
	bool status = 1;
	string msg = 2;
}

message DeleteRequest {
	string uid = 1;
	string tel = 2;
}

message DeleteResponse {
	bool status = 1;
	string msg = 2;
}

message AddRequest {
	User user = 1;
}

message AddResponse {
	bool status = 1;
	string msg = 2;
}