syntax = "proto3";

package userweb;

option go_package = "proto;userweb";

service UserWeb {
	rpc Login(UserRequest) returns (UserResponse) {}
	rpc Register(UserRequest) returns (UserResponse) {}
	rpc Validation(UserRequest) returns (UserResponse) {}
	rpc UpdateProfile(UserProfileRequest) returns (UserProfileResponse) {}
	rpc ReadProfile(UserProfileRequest) returns (UserProfileResponse) {}
}

message Profile {
	string username = 1;
	string email = 2;
	string tel = 3;
	int32  sex = 4;
	int32  age = 5;
	string address = 6;
	int32  classNum = 7;
	string img = 8;
}

message UserRequest { // use tel number to do, return a uid
	string tel = 1;
	string validationCode = 2;
}

message UserProfileRequest {
	string uid = 1;
	string tel = 2;
	int64 informationType = 3;
}

message UserResponse {
	int32 status = 1;
	string uid = 2;
	string msg = 3;
	string token = 4;
}

message UserProfileResponse {
	string uid = 1;
	string type = 2;
	Profile profile = 3;
	string msg = 4;
	int32 status = 5;
}

